--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
-<h1>Hi World</h1>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html lang="en">
 
-<a href="./DayOfWeek.html">A Day Of The Week Calculator</a>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Dave's Home Page Of Utils</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <!-- <link rel="stylesheet" href="" /> -->
+</head>
+
+<body>
+  <h1>Hi World</h1>
+  <a href="./DayOfWeek/DayOfWeek.html">A Day Of The Week Calculator</a>
+</body>
+  
+</html>
