Make entry point index.html, add matrix rain ref
Make sub directories entry point index.html, add matrix rain ref

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <body>
   <h1>Hi World</h1>
-  <a href="./DayOfWeek/DayOfWeek.html">A Day Of The Week Calculator</a>
+  <a href="./DayOfWeek">A Day Of The Week Calculator</a>
+  <a href="./MatrixRain">A "Matrix" Rain style demo</a>
 </body>
   
 </html>
