Added WordleCheat link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 <body>
   <h1>Hi World</h1>
   <a href="./DayOfWeek">A Day Of The Week Calculator</a>
-  <a href="./MatrixRain">A "Matrix" Rain style demo</a>
+  <br>
+  
+  <a href="./MatrixRain">A "Matrix Rain" style demo</a>
+  <br>
+  
+  <a href="./WordleCheat">A cheat aid for Wordle - you're only cheating yourself!</a>
+  <br>
+  
 </body>
   
 </html>
