--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
   <title>Dave's Home Page Of Utils</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
- <!-- <link rel="stylesheet" href="" /> -->
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
-  <h1>Hi World</h1>
-  <a href="./DayOfWeek">A Day Of The Week Calculator</a>
-  <br>
   
-  <a href="./MatrixRain">A "Matrix Rain" style demo</a>
-  <br>
+  <div class="center">
+    
+    <h1>Hi World</h1>
+    <a href="./DayOfWeek">A Day Of The Week Calculator</a>
+    <br>
   
-  <a href="./WordleCheat">A cheat aid for Wordle - you're only cheating yourself!</a>
-  <br>
+    <a href="./MatrixRain">A "Matrix Rain" style demo</a>
+    <br>
+  
+    <a href="./WordleCheat">A cheat aid for Wordle - you're only cheating yourself!</a>
+    <br>
+  </div>
   
 </body>
   
