Current time added

--- a/SmartMirror/index.html
+++ b/SmartMirror/index.html
@@ -16,7 +16,7 @@
     <div class="grid-container">
 
         <div class="grid-item date">
-            <h2 id="date" class="underline squeeze">Date</h2>
+            <h1 id="date" class="underline squeeze"></h1>
         </div>
 
         <div class="bordered grid-item lunch">
@@ -39,6 +39,11 @@
 
         <div class="bordered grid-item info">
             <p>Info: <span id="info"></span></p>
+        </div>
+
+        <div class="grid-item time_now">
+            <!-- <p id="date_now"></p> -->
+            <h1 id="time_now" class="squeeze"></h1>
         </div>
 
         <div class="debug">
