--- a/WordleCheat/index.html
+++ b/WordleCheat/index.html
@@ -12,64 +12,65 @@
 </head>
 <body>
     <div class="center_horiz">
-        <H1>A cheat list of 5 letter words for Worlde.</H1>
+        <H2 class="titles" >A cheat list for Worlde.</H2>
+        <H3 class="titles" >(You're only cheating yourself!)</H3>
         <button type="button" class="button" id="clear_all">Clear & Restart</button>
     </div>
 
     <div class='center_horiz bordered'>
-        <h4>Put letters that are in the correct column here:</h4>
-        <input class='charCorrectPlace' type="text" id="charCorrectPlace_0" size='3'>
-        <input class='charCorrectPlace' type="text" id="charCorrectPlace_1" size='3'>
-        <input class='charCorrectPlace' type="text" id="charCorrectPlace_2" size='3'>
-        <input class='charCorrectPlace' type="text" id="charCorrectPlace_3" size='3'>
-        <input class='charCorrectPlace' type="text" id="charCorrectPlace_4" size='3'>
+        <h4 class="titles" >Put letters that ARE in the CORRECT column here</h4>
+        <input class='charCorrectPlace' type="text" id="charCorrectPlace_0" size='1'>
+        <input class='charCorrectPlace' type="text" id="charCorrectPlace_1" size='1'>
+        <input class='charCorrectPlace' type="text" id="charCorrectPlace_2" size='1'>
+        <input class='charCorrectPlace' type="text" id="charCorrectPlace_3" size='1'>
+        <input class='charCorrectPlace' type="text" id="charCorrectPlace_4" size='1'>
     </div>
 
     <div class='center_horiz bordered'>
-        <h4>In each column place letters that ARE in the word but can NOT be in that column.</h4>
+        <h4 class="titles" >In each column place letters that ARE in the word but CAN NOT be in that column.</h4>
         <div>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_00" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_01" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_02" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_03" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_04" size='3'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_00" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_01" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_02" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_03" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_04" size='1'>
         </div>
             
         <div>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_10" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_11" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_12" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_13" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_14" size='3'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_10" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_11" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_12" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_13" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_14" size='1'>
         </div>
 
         <div>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_20" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_21" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_22" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_23" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_24" size='3'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_20" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_21" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_22" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_23" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_24" size='1'>
         </div>
 
         <div>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_30" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_31" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_32" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_33" size='3'>
-            <input class='charWrongPlace' type="text" id="charWrongPlace_34" size='3'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_30" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_31" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_32" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_33" size='1'>
+            <input class='charWrongPlace' type="text" id="charWrongPlace_34" size='1'>
         </div>
     </div>
 
     <div class="bordered center_horiz">
-        <h4>Put your DEAD letters here:</h4>
-        <input class='charNotInWord' type="text" id="charDeadInWord" size='30' 
+        <h4 class="titles" >Put your DEAD letters here:</h4>
+        <input class='charNotInWord' type="text" id="charDeadInWord" size='26' 
         autocomplete="new-password" autocapitalize="off" autocomplete="off" autocorrect="off"
         spellcheck="false">
     </div>
 
     <div class="center_horiz bordered">
-        <h4>Possible Words Include:</h4>
-        <p id="possible-words"></p>
+        <h4 class="titles">Possible Words Include:</h4>
+        <p class="word-list" id="possible-words"></p>
     </div>
 </body>
 </html>
