--- a/SmartMirror/index.html
+++ b/SmartMirror/index.html
@@ -19,16 +19,14 @@
             <h1 id="date" class="underline squeeze"></h1>
         </div>
 
-        <div class="bordered grid-item lunch">
+        <div class="bordered grid-item menus">
             <div>
                 <h2 class="squeeze">Lunch</h2>
                 <p id="lunch_starter"></p>
                 <p id="lunch_mains"></p>
                 <p id="lunch_pudding"></p>
             </div>
-        </div>
 
-        <div class="bordered grid-item dinner">
             <div>
                 <h2 class="squeeze">Dinner / Tea</h2>
                 <p id="dinner_starter"></p>
@@ -46,7 +44,7 @@
             <h1 id="time_now" class="squeeze"></h1>
         </div>
 
-        <div class="debug">
+        <div id="dbgMain" class="debug">
             <p>Debug: <span id="debug"></span></p>
         </div>
     </div>
