First pass of new mirror html-css

--- a/SmartMirror/mirror.html
+++ b/SmartMirror/mirror.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,76 @@
     <link rel="stylesheet" href="./mirror.css" />
     <title>Mirror Mirror</title>
 </head>
+
 <body>
 
+    <div class="content">
 
-    <div class="datetime-box">
-        <div>
-            <p>Saturday</p>
-            <p>5th March</p>
+        <div class="datetime-box">
+            <div class="date-item">
+                <p class="date-disp">Saturday</p>
+                <p class="date-disp">5th March</p>
+            </div>
+            <div class="time-item">13:04 pm</div>
         </div>
-        <div>13:04 pm</div>
+
+        <div class="main">
+
+            <div class="menus bordered">
+                <div class="meal-item">
+                    <p class="meal-disp" style="margin-top:1rem">Lunch</p>
+                    <hr>
+                    <p class="meal-disp">No Soup<br>
+                        Chicken & Broccolli Pie<br>
+                        Chocolate Sundae
+                    </p>
+                </div>
+
+                <div class="meal-item">
+                    <p class="meal-disp">Dinner / Tea</p>
+                    <hr>
+                    <p class="meal-disp">No Soup<br>
+                        Chicken Risotto<br>
+                        Muller 'Apple' Rice</p>
+                </div>
+            </div>
+
+            <div class="calendar bordered">
+                <p>Calendar</p>
+                <hr>
+
+                <p>Maxillofacial<br>
+                    Thursday, 16th March<br>
+                    Appointment: 2:30 pm<br>
+                    Pickup: 1:30 pm
+
+                    <hr>
+                <p>Hairdresser<br>
+                    Tuesday, 22nd March<br>
+                    Appointment: 2:30 pm<br>
+                    Pickup: 2:10 pm
+                </p>
+            </div>
+
+        </div>
+
+        <div class="weather bordered">
+
+            <div>
+                <p class="weather-item vertical-center">Temp: 10C<br>
+                min: 3C<br>
+                max: 12C</p>
+            </div>
+
+            <div class="vertical-center">
+                <img src="http://openweathermap.org/img/wn/10d@2x.png">
+                <p class="weather-item">It's sunny</p>
+            </div>
+        </div>
+
     </div>
 
 
-    
 </body>
+
 </html>
