Displaying calendar data

--- a/SmartMirror/mirror.html
+++ b/SmartMirror/mirror.html
@@ -25,7 +25,7 @@
                 <div class="meal-item">
                     <p class="meal-disp" style="margin-top:1rem">Lunch</p>
                     <hr>
-                    <p class="meal-disp">No Soup<br>
+                    <p class="meal-disp" id="disp-lunch">No Soup<br>
                         Chicken & Broccolli Pie<br>
                         Chocolate Sundae
                     </p>
@@ -34,26 +34,38 @@
                 <div class="meal-item">
                     <p class="meal-disp">Dinner / Tea</p>
                     <hr>
-                    <p class="meal-disp">No Soup<br>
+                    <p class="meal-disp" id="disp-dinner">No Soup<br>
                         Chicken Risotto<br>
                         Muller 'Apple' Rice</p>
                 </div>
             </div>
 
-            <div class="calendar bordered">
-                <p>Calendar</p>
+            <div class="calendar bordered" id="disp-calendar">
+                <!-- <p style="margin-top: 10px;">Calendar</p> -->
 
-                <p>Maxillofacial<br>
+                <div>
+                    <hr>Maxillofacial<br>
                     Thursday, 16th March<br>
                     Appointment: 2:30 pm<br>
-                    Pickup: 1:30 pm</p>
-                <hr>
+                    Pickup: 1:30 pm
+                    <hr>
+                </div>
 
-                <p>Hairdresser<br>
+                <div>
+                    <hr>Hairdresser<br>
                     Tuesday, 22nd March<br>
                     Appointment: 2:30 pm<br>
-                    Pickup: 2:10 pm </p>
-                <hr>
+                    Pickup: 2:10 pm
+                    <hr>
+                </div>
+
+                <div>
+                    <hr>Something<br>
+                    Some-day<br>
+                    Appointment: Some-time<br>
+                    Pickup: Some-time
+                    <hr>
+                </div>
             </div>
 
         </div>
