Weather and better? code?

--- a/SmartMirror/mirror.html
+++ b/SmartMirror/mirror.html
@@ -73,14 +73,14 @@
         <div class="weather bordered">
 
             <div>
-                <p class="weather-item vertical-center">Temp: 10C<br>
+                <p class="weather-item vertical-center" id="disp-temp">Temp: 10C<br>
                     min: 3C<br>
                     max: 12C</p>
             </div>
 
-            <div class="vertical-center">
-                <img src="http://openweathermap.org/img/wn/10d@2x.png">
-                <p class="weather-item">It's sunny</p>
+            <div class="vertical-center" style="justify-items: right; text-align: right;">
+                <img src="http://openweathermap.org/img/wn/10d@2x.png" style="margin-right: 20px;" id="disp-weather-icon">
+                <p class="weather-item" id="disp-weather-description">It's sunny</p>
             </div>
         </div>
 
