Uses a temp appid and try/catches

--- a/SmartMirror/mirror.html
+++ b/SmartMirror/mirror.html
@@ -15,8 +15,8 @@
     <div class="content">
 
         <div class="datetime-box">
-            <div class="date-item date-disp" id="disp-date">Saturday<br>5th March</div>
-            <div class="time-item" id="disp-time">13:04 pm</div>
+            <div class="date-item date-disp" id="disp-date"></div>
+            <div class="time-item" id="disp-time"></div>
         </div>
 
         <div class="main">
@@ -25,47 +25,18 @@
                 <div class="meal-item">
                     <p class="meal-disp" style="margin-top:1rem">Lunch</p>
                     <hr>
-                    <p class="meal-disp" id="disp-lunch">No Soup<br>
-                        Chicken & Broccolli Pie<br>
-                        Chocolate Sundae
+                    <p class="meal-disp" id="disp-lunch">
                     </p>
                 </div>
 
                 <div class="meal-item">
                     <p class="meal-disp">Dinner / Tea</p>
                     <hr>
-                    <p class="meal-disp" id="disp-dinner">No Soup<br>
-                        Chicken Risotto<br>
-                        Muller 'Apple' Rice</p>
+                    <p class="meal-disp" id="disp-dinner"></p>
                 </div>
             </div>
 
             <div class="calendar bordered" id="disp-calendar">
-                <!-- <p style="margin-top: 10px;">Calendar</p> -->
-
-                <div>
-                    <hr>Maxillofacial<br>
-                    Thursday, 16th March<br>
-                    Appointment: 2:30 pm<br>
-                    Pickup: 1:30 pm
-                    <hr>
-                </div>
-
-                <div>
-                    <hr>Hairdresser<br>
-                    Tuesday, 22nd March<br>
-                    Appointment: 2:30 pm<br>
-                    Pickup: 2:10 pm
-                    <hr>
-                </div>
-
-                <div>
-                    <hr>Something<br>
-                    Some-day<br>
-                    Appointment: Some-time<br>
-                    Pickup: Some-time
-                    <hr>
-                </div>
             </div>
 
         </div>
@@ -73,14 +44,13 @@
         <div class="weather bordered">
 
             <div>
-                <p class="weather-item vertical-center" id="disp-temp">Temp: 10C<br>
-                    min: 3C<br>
-                    max: 12C</p>
+                <p class="weather-item vertical-center" id="disp-temp"></p>
             </div>
 
             <div class="vertical-center" style="justify-items: right; text-align: right;">
-                <img src="http://openweathermap.org/img/wn/10d@2x.png" style="margin-right: 20px;" id="disp-weather-icon">
-                <p class="weather-item" id="disp-weather-description">It's sunny</p>
+                <img src="" style="margin-right: 20px;"
+                    id="disp-weather-icon">
+                <p class="weather-item" id="disp-weather-description"></p>
             </div>
         </div>
 
