Added getting power from cloud database

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   
     <a href="./WordleCheat">A cheat aid for Wordle - you're only cheating yourself!</a>
     <br>
+
+    <a href="./PowerLatest">Power from my roof - in 30 sec intervals</a>
+    <br>
+
   </div>
   
 </body>
